--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,13 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon src/app"
   },
   "author": "Abhilash",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookieparser": "^0.1.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
